Add jSpecify node.setup.s3 package.